cambios en lenin.html

--- a/lenin.html
+++ b/lenin.html
@@ -6,12 +6,19 @@
     <title>LENIN</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="lenin.html">Lenin</a></li>
+            <li><a href="michael.html">Michael</a></li>
+        </ul>
+    </nav>
     <h1>Lenin Flores</h1>
     <p>Hola, mi nombre es Lenin Israel Flores Betancurt, vivo en la ciudad de Quito.</p>
     <img src="img/Lenin.jpg" alt="no carga imagen">
     <p>Mi música favorita es del genero urbano y mi artista preferido es Vico C</p>
     <img src="img/vico.jpg" alt="no carga imagen">
     <p>En mis tiempos libres toco la guitarra e instrumentos andinos como: bandolín, charango, zampoñas</p>
-    
+    <img src="img/instrumentos.jpg" alt="no carga la imagen">
+    <p>mi frase favorita es : <b>Mira que te mando que te esfuerces y seas valiente; no temas ni desmayes, porque Jehová tu Dios estará contigo en dondequiera que vayas. Josue 1:9</b></p>
 </body>
 </html>
