add image michael

--- a/michael.html
+++ b/michael.html
@@ -11,12 +11,22 @@
         MICHAEL STEVEN LLUMIUGSI CHANGOLUISA
     </h1>
     <hr>
+    <nav>
+        <ul>
+            <li><a href="lenin.html">Lenin</a></li>
+            <li><a href="michael.html">Michael</a></li>
+        </ul>
+    </nav>
+    <hr>
     <p>
         <h2>Edad: </h2> 22 años <br>
         <h2>Estatura: </h2> 1.75 m <br>
         <h2>Domicilio: </h2> Machachi <br>
         <h2>Comida Favorita: </h2> Ceviche de Camarón <br>
         <h2>Hobbie: </h2> Dj <br>
+    </p>
+    <p>
+        <img src="img/mifoto.png" alt="Mi foto" width="30px">
     </p>
 
 </body>
