add image michael

--- a/michael.html
+++ b/michael.html
@@ -19,10 +19,10 @@
     </nav>
     <hr>
     <p>
-        <h2>Edad: </h2> 22 años <br>
+        <h2>Edad: </h2> 22 años  <br>
         <h2>Estatura: </h2> 1.75 m <br>
         <h2>Domicilio: </h2> Machachi <br>
-        <h2>Comida Favorita: </h2> Ceviche de Camarón <br>
+        <h2>Comida Favorita: </h2> Ceviche de Camarón / Encebollado <br>
         <h2>Hobbie: </h2> Dj <br>
     </p>
     <p>
